--- a/styles.css
+++ b/styles.css
@@ -156,4 +156,16 @@ h1 {
 .toggle-switch.break-mode::after {
     left: calc(100% - 32px);
     background-color: var(--secondary);
+}
+
+#add-minute {
+    background-color: var(--primary);
+    color: white;
+    opacity: 0.85;
+}
+
+#add-minute:hover {
+    background-color: var(--primary-dark);
+    transform: translateY(-2px);
+    opacity: 1;
 } 
